--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,10 @@
 {
-  "name": "IBーQRコード生成器 v5",
+  "name": "IBーQRコード生成器",
   "short_name": "IB-QR",
-  "start_url": "index.html",
-  "scope": "./",
-  "display": "fullscreen",
-  "theme_color": "#2b7cff",
-  "background_color": "#ffffff",
+  "start_url": "./",
+  "display": "standalone",
+  "background_color": "#0b0f14",
+  "theme_color": "#0b0f14",
   "icons": [
     {
       "src": "icon-192.png",
